# Thesis

./: TRT.asv  TRT.m
THESIS_MPPT/MPPT VS CODE/MPPT_TRACKING_CODE/main/: idf_component.yml
THESIS_MPPT/MPPT_VS_CODE/MPPT_CODE/: CMakeLists.txt  partitions.csv  partitions_4mb_optimised.csv  sdkconfig
THESIS_MPPT/MPPT_VS_CODE/MPPT_CODE/components/ADC/: ADC.c  CMakeLists.txt
THESIS_MPPT/MPPT_VS_CODE/MPPT_CODE/components/Led/: CMakeLists.txt  (+1 more)
THESIS_MPPT/MPPT_VS_CODE/MPPT_CODE/main/: CMakeLists.txt  app_main.c  idf_component.yml
THESIS_MPPT/MPPT_VS_CODE/MPPT_CODE/main/include/: app_priv.h
THESIS_MPPT/MPPT_VS_CODE/MPPT_TRACKING_CODE/: CMakeLists.txt
THESIS_MPPT/MPPT_Visual_Studio_CODE/MPPT_CODE/: sdkconfig.old
THESIS_MPPT/Matlab scripts/: Boost_Component_selection_2 (2).m  Boost_Component_selection_2.asv  Boost_Component_selection_2.m  Boost_Conv_Power_Stage_Design_and_Component_Selection.asv  ControlSystemDesignerSession_1.mat  STABILITY_SELECTING.m  Transfer_Functions.asv  Transfer_Functions.m
THESIS_MPPT/PCB FILES/: Design Suggestions.md  Links.txt  MPPT_BORD_V1.drawio
THESIS_MPPT/Plecs Files/: BOOST_CONVETER_MODEL_THESIS.plecs  BOOST_CONVETER_MODEL_THESIS.plecs.autosave  Old PadnO.txt
THESIS_MPPT/Plecs stuff/: BOOST_CONVETER_MODEL_THESIS.plecs
THESIS_MPPT/Project Documentation/: Component Choises and selection.txt  LINKS.md  THINGS TO CONSIDER FOR FIRST PRESENTATION.md
THESIS_MPPT/Project Documentation/POWER_STAGE_RELATED/: Component Choises and selection.md
THESIS_MPPT/Results All/Design_Stage/Inrush Currents at startup/: Note of Explanation.txt
(+23 files in other folders)
